<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="network_is_not_connected">网络未连接,请检查网络</string>
    <string name="network_is_timeout">网络连接超时，请检查网络后重试</string>
    <string name="data_request_failed">未知错误，请稍后重试</string>
    <string name="data_request_error">未知错误，请稍后重试</string>
    <string name="abnormal_security_certificate">安全证书异常</string>
    <string name="domain_resolution_failed">域名解析失败</string>
    <string name="network_exception_please_check_your_network_status">网络异常，请检查您的网络状态</string>
    <string name="invalid_network_address">无效的网络地址</string>
    <string name="authentication_failed">认证失败</string>
    <string name="no_network_view_hint">网络异常</string>
    <string name="error_view_hint">加载失败</string>
    <string name="agree">个赞</string>
    <string name="data_error">数据出错，请重试</string>
    <string name="unknown">未知</string>
    <string name="collect">收藏</string>
    <string name="my_collect">我的收藏</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="collect_success">收藏成功</string>
    <string name="edit_success">编辑成功</string>
    <string name="delete_success">删除成功</string>
    <string name="collect_after_login">请先登录后再收藏</string>
    <string name="please_login_first">还未登录，请登录后操作</string>
    <string name="cancel_collect_success">已经取消收藏</string>
    <string name="cancel_collect_failed">取消收藏失败</string>
    <string name="collect_failed" tools:ignore="ExtraTranslation">收藏失败</string>
    <string name="edit_failed" tools:ignore="ExtraTranslation">编辑失败</string>
    <string name="delete_failed" tools:ignore="ExtraTranslation">删除失败</string>
    <string name="copy_link">复制链接</string>
    <string name="open_in_browser">浏览器打开</string>
    <string name="qq">QQ</string>
    <string name="we_chat">微信</string>
    <string name="circle_of_friends">朋友圈</string>
    <string name="qq_space">qq空间</string>
    <string name="other">其他</string>
    <string name="sure">确定</string>
    <string name="cancel" tools:ignore="ExtraTranslation">取消</string>
    <string name="link_copy_success">链接已复制到系统粘贴板</string>
    <string name="share_to_other">分享到</string>
    <string name="please_input_ser_name">请输入账号</string>
    <string name="please_input_pass_word">请输入密码</string>
    <string name="please_confirm_pass_word">确认密码</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="registered">注册</string>
    <string name="registered_success">注册成功</string>
    <string name="registered_failed">注册失败</string>
    <string name="there_is_no_account_to_registered">还没有账号？前去注册</string>
    <string name="you_already_have_an_account_log_in">已经有账号了，去登录</string>
    <string name="account_can_not_be_empty">账号不能为空</string>
    <string name="pass_word_can_not_be_empty">密码不能为空</string>
    <string name="pass_word2_can_not_be_empty">确认密码不能为空</string>
    <string name="inconsistent_password_input">密码输入不一致</string>
    <string name="loading_please_wait">加载中，请稍等</string>
    <string name="submit_please_wait">数据提交中，请稍等</string>
    <string name="login_please_wait">登录中，请稍等</string>
    <string name="register_please_wait">注册中，请稍等</string>
    <string name="logout_please_wait">退出登录中，请稍等</string>
    <string name="press_again_to_exit_the_application">再按一次退出应用</string>
    <string name="tag_placed_at_the_top">置顶</string>
    <string name="tag_new">新</string>
    <string name="save">保存</string>
    <string name="fragment_list_is_null">页面数据集合为空</string>
    <string name="click_position_is_error">点击位置出错</string>
    <string name="data_list_is_null">获取的数据集合为空</string>
    <string name="id_is_error">没有拿到正确的数据id</string>
    <string name="image_url_is_null">图片地址为空</string>
    <string name="key_is_null">传过来的关键字为空</string>
    <string name="wx_id_is_null">传过来的微信公众号id为空</string>
    <string name="author">作者：</string>
    <string name="date">时间：</string>
    <string name="create_date">创建时间：</string>
    <string name="search" tools:ignore="ExtraTranslation">搜索</string>
    <string name="search_all">全局搜索</string>
    <string name="search_content">搜索内容</string>
    <string name="all">全部</string>
    <string name="official_accounts">公众号</string>
    <string name="official_accounts1">的公众号</string>
    <string name="search_wx_article">公众号搜索</string>
    <string name="search_hot_key">搜索热词</string>
    <string name="search_history">搜索历史</string>
    <string name="search_content_is_empty">搜索内容为空</string>
    <string name="there_is_no_data">这里没有数据</string>
    <string name="author_name">作者昵称</string>

    <string name="empty_view_hint">暂无数据</string>
    <string name="filter">筛选</string>
    <string name="logout_success">已经退出登录</string>
    <string name="logout_failed">退出登录失败，请稍后重试</string>
</resources>
