<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".aty.LoginAty"
    >

    <ImageView
        android:id="@+id/imvBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        tools:ignore="ContentDescription"
        />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/red"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/login"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_40"
        android:paddingEnd="@dimen/dp_40"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/value_default"
            app:errorEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_ser_name"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@color/value_default"
                android:textSize="@dimen/sp_18"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_5"
            android:textColorHint="@color/value_default"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_pass_word"
                android:inputType="textPassword"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@color/value_default"
                android:textSize="@dimen/sp_18"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassWord2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:textColorHint="@color/value_default"
            android:visibility="gone"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassWord2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_confirm_pass_word"
                android:inputType="textPassword"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@color/value_default"
                android:textSize="@dimen/sp_18"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_40"
            android:clickable="true"
            android:focusable="true"
            android:stateListAnimator="@drawable/lift_on_touch"
            app:cardBackgroundColor="@color/tool_bar_right"
            app:cardCornerRadius="@dimen/dp_20"
            >

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_30"
                android:layout_marginBottom="@dimen/dp_10"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/login"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_30"
                android:layout_marginBottom="@dimen/dp_10"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/registered"
                android:textColor="@color/white"
                android:visibility="gone"
                />

        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:id="@+id/rlRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_5"
            android:gravity="center"
            android:padding="@dimen/dp_10">

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/there_is_no_account_to_registered"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/you_already_have_an_account_log_in"
                android:textColor="@color/black"
                android:visibility="gone"
                />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>